force-app/main/default/objects/CGC_Program__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Completed_Exercises__c</fullName>
        <label>Completed Exercises</label>
        <summarizedField>CGC_Section__c.Completed_Exercises__c</summarizedField>
        <summaryForeignKey>CGC_Section__c.Program__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Completed_Milestones__c</fullName>
        <label>Completed Milestones</label>
        <summarizedField>CGC_Section__c.Completed_Milestones__c</summarizedField>
        <summaryForeignKey>CGC_Section__c.Program__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Completion_Percentage__c</fullName>
        <formula>( Current_Value__c /  Total_Milestones_and_Exercises__c ) * 100</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Completion Percentage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Current_Value__c</fullName>
        <formula>Completed_Milestones__c  +  Completed_Exercises__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Due_Date__c</fullName>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Milestone_Icon_Type__c</fullName>
        <label>Milestone Icon Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Icon</fullName>
                </value>
                <value>
                    <fullName>Progress Ring</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Target_Value__c</fullName>
        <formula>Total_Milestones__c + Total_Exercises__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Target Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Exercises__c</fullName>
        <label>Total Exercises</label>
        <summaryForeignKey>CGC_Exercise__c.Program__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Milestones__c</fullName>
        <label>Total Milestones</label>
        <summaryForeignKey>CGC_Milestone__c.Program__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Milestones_and_Exercises__c</fullName>
        <label>Total Milestones and Exercises</label>
        <summarizedField>CGC_Section__c.Total_Milestones_and_Exercises__c</summarizedField>
        <summaryForeignKey>CGC_Section__c.Program__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Demo Program</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Description__c</columns>
        <columns>Due_Date__c</columns>
        <columns>Completion_Percentage__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Program Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Demo Programs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>